add and affiche formations with image, full logic

--- a/angular-frontend/src/app/Admin/formation/create-formation/create-formation.component.html
+++ b/angular-frontend/src/app/Admin/formation/create-formation/create-formation.component.html
@@ -16,13 +16,47 @@
           </div>
 
           <div class="card-body">
-            <form action="">
+            <form action="" (submit)="addFormationWithImage()">
+              <!-- IMAGE -->
+              
               <div class="form-group">
+                
+                
+                <div *ngIf="selectedImage" class="text-center mt-3">
+                  <img width="200" height="150" [src]="getImageUrl()" alt="Selected Image" class="img-fluid rounded" />
+                </div>
+            
+                <!-- File input with styling -->
+                <div class="form-group mt-3">
+                  <label for="imageFile" class="font-weight-bold">Select Image:</label>
+                  <div class="custom-file">
+                    <input
+                      type="file"
+                      class="custom-file-input"
+                      id="imageFile"
+                      name="imageFile"
+                      (change)="onImageSelected($event)"
+                      accept="image/*"
+                    />
+                    <label class="custom-file-label" for="imageFile"><small class="form-text text-muted">
+                    Select a valid image file ( png).
+                  </small></label>
+                  </div>
+                  
+                </div>
+                   
+          
+                
+                <!-- fin image -->
+                
+             
+
+
                 <!-- NOM -->
                 <label for="nom">Nom de Formation</label>
                 <!-- ngModel same name in ts -->
                 <input
-                  [(ngModel)]="nom"
+                  [(ngModel)]="formation.nom"
                   class="form-control"
                   type="text"
                   name="nom"
@@ -110,11 +144,8 @@
                   id="formateur"
                   (change)="onFormateurSelected($event.target.value)"
                 >
-                <option
-                   
-                    [value]="0"
-                  >
-                   - No Formateur : Select to change -
+                  <option [value]="0">
+                    - No Formateur : Select to change -
                   </option>
                   <option
                     *ngFor="let formateur of formateurs"
@@ -130,11 +161,8 @@
                   id="entreprise"
                   (change)="onEntrepriseSelected($event.target.value)"
                 >
-                <option
-                   
-                    [value]="0"
-                  >
-                   - No Entreprise : Select to change -
+                  <option [value]="0">
+                    - No Entreprise : Select to change -
                   </option>
                   <option
                     *ngFor="let entreprise of entreprises"
@@ -146,8 +174,7 @@
 
                 <button
                   [disabled]="isSubmitting"
-                  (click)="addFormation()"
-                  type="button"
+                  type="submit"
                   class="form-control btn btn-outline-primary mt-3"
                 >
                   Ajouter la Formation
