--- a/angular-frontend/src/app/home/category-formation/category-formation.component.html
+++ b/angular-frontend/src/app/home/category-formation/category-formation.component.html
@@ -31,10 +31,15 @@
                     <!--begin::Icon-->
                     <div class="symbol symbol-45px w-45px bg-light me-5">
                       <img
-                        src="assets/img/angular.png"
-                        alt="image"
+                          *ngIf="formation.imageName !== null; else defaultImage"
+                          [src]="'http://localhost:8080/formation/' + formation.id + '/image'"
+                          alt="image"
                         class="p-3"
-                      />
+                        />
+                        <ng-template #defaultImage>
+                          <img src="/assets/img/angular.png"  alt="image"
+                          class="p-3" />
+                        </ng-template>
                     </div>
                     <!--end::Icon-->
                     <!--begin::Title-->
@@ -269,8 +274,8 @@
                   </div>
                   <a
                     [routerLink]="[
-                      '/admin/individu/add/formation',
-                      formation.id
+                      '/home/individu/add',
+                      formation.id,'formation'
                     ]"
                     class="btn btn-outline-info mx-1"
                     >S'inscrire au formation</a
@@ -279,7 +284,7 @@
                   <a
                     *ngIf="formation.formateur === null"
                     [routerLink]="[
-                      '/home/individu/add',
+                      '/home/formateur/add',
                       formation.id,
                       'formation'
                     ]"
