--- a/angular-frontend/src/app/home/date-formation/date-formation.component.html
+++ b/angular-frontend/src/app/home/date-formation/date-formation.component.html
@@ -31,10 +31,15 @@
                     <!--begin::Icon-->
                     <div class="symbol symbol-45px w-45px bg-light me-5">
                       <img
-                        src="assets/img/angular.png"
-                        alt="image"
+                          *ngIf="formation.imageName !== null; else defaultImage"
+                          [src]="'http://localhost:8080/formation/' + formation.id + '/image'"
+                          alt="image"
                         class="p-3"
-                      />
+                        />
+                        <ng-template #defaultImage>
+                          <img src="/assets/img/angular.png"  alt="image"
+                          class="p-3" />
+                        </ng-template>
                     </div>
                     <!--end::Icon-->
                     <!--begin::Title-->
@@ -280,8 +285,8 @@
                   <a
                     *ngIf="formation.formateur === null"
                     [routerLink]="[
-                      '/admin/formateur/add/formation',
-                      formation.id
+                      '/admin/formateur/add',
+                      formation.id,'formation'
                     ]"
                     class="btn btn-outline-success mx-1"
                     >S'inscrire en tant que formateur</a
