Adaptation the signup form

--- a/angular-frontend/src/app/auth/component/login/login.component.html
+++ b/angular-frontend/src/app/auth/component/login/login.component.html
@@ -78,7 +78,7 @@
   <div class="text-gray-500 text-center fw-semibold fs-6">
     Not a Member yet?
     <a
-      href="../../demo1/dist/authentication/layouts/overlay/sign-up.html"
+      href="#/auth/signup"
       class="link-primary"
       >Sign up</a
     >
