--- a/angular-frontend/src/app/auth/auth.component.html
+++ b/angular-frontend/src/app/auth/auth.component.html
@@ -30,21 +30,8 @@
           <!--end::Image-->
           <!--begin::Title-->
           <h1 class="text-gray-800 fs-2qx fw-bold text-center mb-7">
-            Fast, Efficient and Productive
+            FullStack - Center
           </h1>
-          <!--end::Title-->
-          <!--begin::Text-->
-          <div class="text-gray-600 fs-base text-center fw-semibold">
-            In this kind of post,
-            <a href="#" class="opacity-75-hover text-primary me-1"
-              >the blogger</a
-            >introduces a person they’ve interviewed <br />and provides some
-            background information about
-            <a href="#" class="opacity-75-hover text-primary me-1"
-              >the interviewee</a
-            >and their <br />work following this is a transcript of the
-            interview.
-          </div>
           <!--end::Text-->
         </div>
         <!--end::Content-->
