--- a/angular-frontend/src/app/components/home-header/home-header.component.html
+++ b/angular-frontend/src/app/components/home-header/home-header.component.html
@@ -1,33 +1,30 @@
 <div id="kt_app_header" class="app-header">
     <!--begin::Header container-->
-    <div class="app-container container-xxl d-flex align-items-stretch justify-content-between" 
-    id="kt_app_header_container">
+    <div class="app-container container-xxl d-flex align-items-stretch justify-content-between"
+        id="kt_app_header_container">
         <!--begin::Logo-->
         <div class="d-flex align-items-center flex-grow-1 flex-lg-grow-0 me-lg-15">
             <a href="#/home">
-                <img alt="Logo" src="assets/img/angular.png" 
-                class="h-20px h-lg-30px app-sidebar-logo-default theme-light-show" />
-                            </a>
+                <img alt="Logo" src="assets/img/angular.png"
+                    class="h-20px h-lg-30px app-sidebar-logo-default theme-light-show" />
+            </a>
         </div>
         <!--end::Logo-->
         <!--begin::Header wrapper-->
-        <div class="d-flex align-items-stretch justify-content-between flex-lg-grow-1"
-         id="kt_app_header_wrapper">
+        <div class="d-flex align-items-stretch justify-content-between flex-lg-grow-1" id="kt_app_header_wrapper">
             <!--begin::Menu wrapper-->
-            <div class="app-header-menu app-header-mobile-drawer align-items-stretch" 
-            data-kt-drawer="true" data-kt-drawer-name="app-header-menu" 
-            data-kt-drawer-activate="{default: true, lg: false}" data-kt-drawer-overlay="true" 
-            data-kt-drawer-width="250px" data-kt-drawer-direction="end" 
-            data-kt-drawer-toggle="#kt_app_header_menu_toggle" data-kt-swapper="true" 
-            data-kt-swapper-mode="{default: 'append', lg: 'prepend'}" 
-            data-kt-swapper-parent="{default: '#kt_app_body', lg: '#kt_app_header_wrapper'}">
+            <div class="app-header-menu app-header-mobile-drawer align-items-stretch" data-kt-drawer="true"
+                data-kt-drawer-name="app-header-menu" data-kt-drawer-activate="{default: true, lg: false}"
+                data-kt-drawer-overlay="true" data-kt-drawer-width="250px" data-kt-drawer-direction="end"
+                data-kt-drawer-toggle="#kt_app_header_menu_toggle" data-kt-swapper="true"
+                data-kt-swapper-mode="{default: 'append', lg: 'prepend'}"
+                data-kt-swapper-parent="{default: '#kt_app_body', lg: '#kt_app_header_wrapper'}">
                 <!--begin::Menu-->
                 <div class="menu menu-rounded menu-column menu-lg-row my-5 my-lg-0 align-items-stretch fw-semibold px-2 px-lg-0"
-                 id="kt_app_header_menu" data-kt-menu="true">
+                    id="kt_app_header_menu" data-kt-menu="true">
                     <!--begin:Menu item-->
-                    <div data-kt-menu-trigger="{default: 'click', lg: 'hover'}" 
-                    data-kt-menu-placement="bottom-start" 
-                    class="menu-item menu-here-bg menu-lg-down-accordion me-0 me-lg-2">
+                    <div data-kt-menu-trigger="{default: 'click', lg: 'hover'}" data-kt-menu-placement="bottom-start"
+                        class="menu-item menu-here-bg menu-lg-down-accordion me-0 me-lg-2">
                         <!--begin:Menu link-->
                         <a href="#/admin/dashboard">
                             <span class="menu-title menu-link">Admin Dashboard</span>
@@ -38,7 +35,8 @@
                     </div>
                     <!--end:Menu item-->
                     <!--begin:Menu item-->
-                    <div data-kt-menu-trigger="{default: 'click', lg: 'hover'}" data-kt-menu-placement="bottom-start" class="menu-item menu-lg-down-accordion me-0 me-lg-2">
+                    <div data-kt-menu-trigger="{default: 'click', lg: 'hover'}" data-kt-menu-placement="bottom-start"
+                        class="menu-item menu-lg-down-accordion me-0 me-lg-2">
                         <!--begin:Menu link-->
                         <span class="menu-link">
                             <span class="menu-title  menu-link">Profile</span>
@@ -49,9 +47,8 @@
                     </div>
                     <!--end:Menu item-->
                     <!--begin:Menu item-->
-                    <div data-kt-menu-trigger="{default: 'click', lg: 'hover'}"
-                     data-kt-menu-placement="bottom-start" 
-                     class="menu-item menu-lg-down-accordion menu-sub-lg-down-indention me-0 me-lg-2">
+                    <div data-kt-menu-trigger="{default: 'click', lg: 'hover'}" data-kt-menu-placement="bottom-start"
+                        class="menu-item menu-lg-down-accordion menu-sub-lg-down-indention me-0 me-lg-2">
                         <!--begin:Menu link-->
                         <a href="#/admin/calendar">
                             <span class="menu-title  menu-link">Calendrier</span>
@@ -62,8 +59,8 @@
                     </div>
                     <!--end:Menu item-->
                     <!--begin:Menu item-->
-                    <div data-kt-menu-trigger="{default: 'click', lg: 'hover'}" 
-                    data-kt-menu-placement="bottom-start" class="menu-item here show">
+                    <div data-kt-menu-trigger="{default: 'click', lg: 'hover'}" data-kt-menu-placement="bottom-start"
+                        class="menu-item here show">
                         <!--begin:Menu link-->
                         <a href="#/admin/home">
                             <span class="menu-title  menu-link">Formations</span>
@@ -74,18 +71,29 @@
                     </div>
                     <!--end:Menu item-->
                     <!--begin:Menu item-->
-                    <div data-kt-menu-trigger="{default: 'click', lg: 'hover'}" 
-                    data-kt-menu-placement="bottom-start" 
-                    class="menu-item menu-lg-down-accordion menu-sub-lg-down-indention me-0 ms-auto me-lg-2">
-                    <!--begin:Menu link-->
-                    <a href="#/auth/login">
-                        <!-- ngIf notoken register/login  -->
-                        <span class="menu-title  menu-link">Login</span>
-                        <span class="menu-arrow d-lg-none"></span>
-                    </a>
-                    <!--end:Menu link-->
-                </div>
-                
+                    <div data-kt-menu-trigger="{default: 'click', lg: 'hover'}" data-kt-menu-placement="bottom-start"
+                        class="menu-item menu-lg-down-accordion menu-sub-lg-down-indention me-0 ms-auto me-lg-2">
+                        <!--begin:Menu link-->
+                        <a href="#/auth/login">
+                            <!-- ngIf notoken register/login  -->
+                            <span class="menu-title  menu-link">Login</span>
+                            <span class="menu-arrow d-lg-none"></span>
+                        </a>
+                        <!--end:Menu link-->
+                    </div>
+
+                    <!--signup-->
+                    <div data-kt-menu-trigger="{default: 'click', lg: 'hover'}" data-kt-menu-placement="bottom-start"
+                        class="menu-item menu-lg-down-accordion menu-sub-lg-down-indention me-0 ms-auto me-lg-2">
+                        <!--begin:Menu link-->
+                        <a href="#/auth/signup">
+                            <!-- ngIf notoken register/login  -->
+                            <span class="menu-title  menu-link">Sign Up</span>
+                            <span class="menu-arrow d-lg-none"></span>
+                        </a>
+                        <!--end:Menu link-->
+                    </div>
+
                     <!--end:Menu item-->
                 </div>
                 <!--end::Menu-->
@@ -93,7 +101,7 @@
             <!--end::Menu wrapper-->
             <!--begin::Navbar-->
             <div class="app-navbar flex-shrink-0">
-                
+
             </div>
             <!--end::Navbar-->
         </div>
