Assistant full + routings

--- a/angular-frontend/src/app/Admin/Individu/all-individus/all-individus.component.html
+++ b/angular-frontend/src/app/Admin/Individu/all-individus/all-individus.component.html
@@ -36,6 +36,7 @@
                           >Edit</a
                         >
                         <button
+                          *ngIf="permission"
                           (click)="deleteIndividu(individu.id)"
                           class="btn btn-outline-danger mx-1"
                         >
