--- a/angular-frontend/src/app/components/sidebar/sidebar.component.html
+++ b/angular-frontend/src/app/components/sidebar/sidebar.component.html
@@ -20,12 +20,14 @@
       </span>
     </form>
   </div>
-    <ul class="nav">
-        <li routerLinkActive="active" *ngFor="let menuItem of menuItems" class="{{menuItem.class}} nav-item">
-            <a class="nav-link" [routerLink]="[menuItem.path]">
-                <i class="material-icons">{{menuItem.icon}}</i>
-                <p>{{menuItem.title}}</p>
-            </a>
-        </li>
-    </ul>
+  <ul class="nav">
+    <li routerLinkActive="active" *ngFor="let menuItem of menuItems" class="{{menuItem.class}} nav-item">
+      <ng-container *ngIf="menuItem.role">
+        <a class="nav-link" [routerLink]="[menuItem.path]">
+            <i class="material-icons">{{menuItem.icon}}</i>
+            <p>{{menuItem.title}}</p>
+        </a>
+      </ng-container>
+    </li>
+  </ul>
 </div>
