--- a/angular-frontend/src/app/Admin/formation/dashboard/dashboard.component.html
+++ b/angular-frontend/src/app/Admin/formation/dashboard/dashboard.component.html
@@ -12,14 +12,14 @@
         <div class="card card-chart">
           <div class="img">
           
-              <img class="mt-4"
+              <img class="pt-4"
                 *ngIf="formation.imageName !== null; else defaultImage"
                 [src]="'http://localhost:8080/formation/' + formation.id + '/image'"
                 width="200"
                 height="150"
               />
               <ng-template #defaultImage>
-                <img class="mt-4" src="/assets/img/angular.png" width="200" height="150" />
+                <img class="pt-4" src="/assets/img/angular.png" width="200" height="150" />
               </ng-template>
        
             
