--- a/angular-frontend/src/app/home/card-home/card-home.component.html
+++ b/angular-frontend/src/app/home/card-home/card-home.component.html
@@ -59,7 +59,14 @@
                   <!--begin::Card toolbar-->
                   <div class="card-toolbar m-0">
                     <!--begin::Menu-->
-                    <button
+                    <button 
+                    [routerLink]="[
+                      '/home/individu/add',
+                      formation.id,
+                      'formation'
+                    ]"
+                    
+
                       type="button"
                       class="btn btn-clean btn-sm btn-icon btn-icon-primary btn-active-light-primary me-n3"
                       data-kt-menu-trigger="click"
