--- a/angular-frontend/src/app/home/date-formation/date-formation.component.html
+++ b/angular-frontend/src/app/home/date-formation/date-formation.component.html
@@ -58,6 +58,11 @@
                   <div class="card-toolbar m-0">
                     <!--begin::Menu-->
                     <button
+                    [routerLink]="[
+                    '/home/individu/add',
+                    formation.id,
+                    'formation'
+                  ]"
                       type="button"
                       class="btn btn-clean btn-sm btn-icon btn-icon-primary btn-active-light-primary me-n3"
                       data-kt-menu-trigger="click"
