Upload file design

--- a/angular-frontend/src/app/Admin/formation/create-formation/create-formation.component.css
+++ b/angular-frontend/src/app/Admin/formation/create-formation/create-formation.component.css
@@ -30,4 +30,15 @@
     border: 1px solid #ced4da;
     border-radius: .25rem;
   }
+
+  /* file-upload.component.css */
+
+.progress {
+    margin-top: 10px;
+  }
+  
+  .progress-bar {
+    height: 20px;
+  }
+  
   
